Little changes on backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.username = root
 spring.datasource.password = rootroot
 spring.jpa.show-sql = true
 spring.batch.initialize-schema=always
+spring.data.web.pageable.one-indexed-parameters=true
