Added CORS config, specific queries for search and some more CRUD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password = rootroot
 spring.jpa.show-sql = true
 spring.batch.initialize-schema=always
 spring.data.web.pageable.one-indexed-parameters=true
+
+allowed.origin = http://localhost:3000
