--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
     		 <groupId>mysql</groupId>
     		 <artifactId>mysql-connector-java</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.28</version>
+		</dependency>
 	</dependencies>
 
 	<build>
