Experimenting with search object on backend, nothing important

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.batch.initialize-schema=always
 spring.data.web.pageable.one-indexed-parameters=true
 
 allowed.origin = http://localhost:3000
+server.tomcat.relaxed-query-chars=|,{,},[,],%,
